syntax = "proto3";

package stredono;

option go_package="github.com/pkulik0/stredono/cloud/pb";

import 'pb/enums.proto';

message TipSettings {
  double MinAmount = 1;
  AuthLevel MinAuthLevel = 2;
  Currency Currency = 3;
}

enum AuthLevel {
  NONE = 0;
  EMAIL = 1;
  OIDC = 2;
}